feat(ui): add SidebarMainContent
Signed-off-by: Petr Bulánek <bulanek.petr@gmail.com>

--- a/apps/beeai-web/tsconfig.json
+++ b/apps/beeai-web/tsconfig.json
@@ -27,10 +27,10 @@
     ]
   },
   "include": [
-    "next-env.d.ts",
-    "agentstack-env.d.ts",
+    "src/@types/**/*.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "next-env.d.ts",
     ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
