--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -237,6 +237,9 @@ tolerations: [ ]
 
 affinity: { }
 
+# Uvicorn --timeout-keep-alive (in seconds)
+uvicornTimeoutKeepAlive: 5
+
 connector:
   presets:
     - url: "https://mcp.stripe.com"
